@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2006/10/12
+	* When slaves_inherit_speed is set (which is also the default), homun will
+	  have the same speed of their master when spawned. [Skotlex]
+	* When using Hatred and you already have a hate target, your current hate
+	  target is displayed now. [Skotlex]
 2006/10/11
 	* Cleaned up the char-server code when the last point of a player is not
 	  found. First it'll check if there's any mapserver online, and then, if
